--- a/R/www/styles.css
+++ b/R/www/styles.css
@@ -1,13 +1,80 @@
+/*****************************************
+*             Main Set-up                *
+*****************************************/
+
 :root {
   --header: #0069b5;
   --tab-background: #005593;
   --title-text-color: #0073c6;
 }
 
-
-input[type="number"] {
-  max-width: 80%;
+body, 
+label, 
+input, 
+button, 
+select { 
+  font-family: 'Helvetica Neue', Helvetica;
+  font-weight: 200;
 }
+
+h1, 
+h2, 
+h3, 
+h4 { 
+  font-weight: 400; 
+}
+
+/*****************************************
+*               Header                   *
+*****************************************/
+
+.container-fluid > .navbar-collapse, 
+.container-fluid > .navbar-header, 
+.container > .navbar-collapse, 
+.container > .navbar-header, 
+.nav > li {
+    float: left !important
+}
+
+.navbar {
+  max-height: 50px;
+}
+
+.navbar-nav > li > a {
+    line-height: 20px !important;
+    padding-top: 15px !important;
+    padding-bottom: 15px !important;
+    margin-left: 10px;
+}
+
+.navbar-nav {
+    margin: 0px -15px !important;
+}
+.navbar-default {
+    background-color: var(--header) !important;
+    border-color: var(--header) !important;
+}
+.navbar-default .navbar-brand {
+    color: white !important;
+    font-weight: bold;
+}
+.navbar-default .navbar-nav > li > a,
+.navbar-default .navbar-brand:focus, 
+.navbar-default .navbar-brand:hover {
+    color: white !important;
+}
+
+.navbar-default .navbar-nav > .active > a, 
+.navbar-default .navbar-nav > .active > a:focus, 
+.navbar-default .navbar-nav > .active > a:hover {
+    color: white !important;
+    background-color: var(--tab-background) !important;
+}
+
+/*****************************************
+*               Map                      *
+*****************************************/
+
 
 div.outer {
   position: fixed;
@@ -19,27 +86,13 @@ div.outer {
   padding: 0;
 }
 
-/* Customize fonts */
-body, label, input, button, select { 
-  font-family: 'Helvetica Neue', Helvetica;
-  font-weight: 200;
-}
-h1, h2, h3, h4 { font-weight: 400; }
-
 #controls,
-#cur_l{
-  /* Appearance */
+#cur_l {
   background-color: transparent;
   padding: 0 0px 0px 0px;
   cursor: move;
-  /* Fade out while not hovering */
   z-index: 400;
   border: none !important;
-}
-
-/* If not using map tiles, show a white background */
-.leaflet-container {
-  background-color: white !important;
 }
 
 .leaflet-top.leaflet-left {
@@ -61,7 +114,7 @@ h1, h2, h3, h4 { font-weight: 400; }
     float: left;
 }
 
-#place{
+#place {
     padding-right: 40px;
     border-radius: 2px;
     box-shadow: 0 2px 4px rgba(0,0,0,0.2),0 -1px 0px rgba(0,0,0,0.02);
@@ -96,48 +149,6 @@ h1, h2, h3, h4 { font-weight: 400; }
     line-height: 26px;
 }
 
-.container-fluid > .navbar-collapse, .container-fluid > .navbar-header, .container > .navbar-collapse, .container > .navbar-header, .nav > li {
-    float: left !important
-}
-
-.navbar {
-  max-height: 50px;
-}
-
-.navbar-nav > li > a {
-    line-height: 20px !important;
-    padding-top: 15px !important;
-    padding-bottom: 15px !important;
-    margin-left: 10px;
-}
-
-.navbar-nav {
-    margin: 0px -15px !important;
-}
-.navbar-default {
-    /*background-color: #00b580 !important;*/
-    background-color: var(--header) !important;
-    /*border-color: #00b580 !important;*/
-    border-color: var(--header) !important;
-}
-.navbar-default .navbar-brand {
-    color: white !important;
-    font-weight: bold;
-}
-.navbar-default .navbar-nav > li > a {
-    color: white !important;
-}
-
-.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:focus, .navbar-default .navbar-nav > .active > a:hover {
-    color: white !important;
-    /*background-color: #009368 !important;*/
-    background-color: var(--tab-background) !important;
-}
-
-.navbar-default .navbar-brand:focus, .navbar-default .navbar-brand:hover {
-    color: white !important;
-}
-
 #server_problems {
     top: 110px !important;
     bottom: auto !important;
@@ -161,18 +172,6 @@ h1, h2, h3, h4 { font-weight: 400; }
     color: var(--title-text-color);
     background: none;
     border: none;
-}
-
-.table-striped > tbody > tr:nth-of-type(2n+1) {
-    /*background-color: #d7fff3;*/
-    background-color: #e8f5ff;
-}
-
-.stream_popup .leaflet-popup-content-wrapper {
-    /*
-    cursor: pointer;
-    color: blue;
-    text-decoration: underline;*/
 }
 
 .leaflet-touch .leaflet-bar a {
@@ -201,7 +200,7 @@ h1, h2, h3, h4 { font-weight: 400; }
   padding-top: 10px;
   cursor: pointer;
   -webkit-transition: color .2s; /* Safari */
-   transition: color .2s;
+  transition: color .2s;
 }
 
 .open-stream {
@@ -236,4 +235,13 @@ h1, h2, h3, h4 { font-weight: 400; }
 
 .open-stream:hover {
     text-decoration: none;
+}
+
+
+/*****************************************
+*            Information                 *
+*****************************************/
+
+.table-striped > tbody > tr:nth-of-type(2n+1) {
+    background-color: #e8f5ff;
 }
