--- a/R/www/styles.css
+++ b/R/www/styles.css
@@ -20,25 +20,17 @@ select {
 h1, 
 h2, 
 h3, 
-h4 { 
-  font-weight: 400; 
-}
+h4 { font-weight: 400; }
 
 /*****************************************
 *               Header                   *
 *****************************************/
 
-.container-fluid > .navbar-collapse, 
-.container-fluid > .navbar-header, 
-.container > .navbar-collapse, 
-.container > .navbar-header, 
-.nav > li {
-    float: left !important
-}
+ 
+.navbar-header, 
+.nav > li { float: left !important }
 
-.navbar {
-  max-height: 50px;
-}
+.navbar { max-height: 50px; }
 
 .navbar-nav > li > a {
     line-height: 20px !important;
@@ -47,36 +39,25 @@ h4 {
     margin-left: 10px;
 }
 
-.navbar-nav {
-    margin: 0px -15px !important;
-}
+.navbar-nav { margin: 0px -15px !important; }
+
 .navbar-default {
     background-color: var(--header) !important;
     border-color: var(--header) !important;
 }
-.navbar-default .navbar-brand {
-    color: white !important;
-    font-weight: bold;
-}
-.navbar-default .navbar-nav > li > a,
-.navbar-default .navbar-brand:focus, 
-.navbar-default .navbar-brand:hover {
-    color: white !important;
-}
+.navbar-default .navbar-brand { font-weight: bold; }
 
-.navbar-default .navbar-nav > .active > a, 
-.navbar-default .navbar-nav > .active > a:focus, 
-.navbar-default .navbar-nav > .active > a:hover {
-    color: white !important;
-    background-color: var(--tab-background) !important;
-}
+.navbar-default .navbar-nav > li > a,
+.navbar-default .navbar-brand { color: white !important; }
+
+.navbar-default .navbar-nav > .active > a { background-color: var(--tab-background) !important; }
 
 /*****************************************
 *               Map                      *
 *****************************************/
 
 
-div.outer {
+.outer {
   position: fixed;
   top: 41px;
   left: 0;
@@ -89,30 +70,20 @@ div.outer {
 #controls,
 #cur_l {
   background-color: transparent;
-  padding: 0 0px 0px 0px;
-  cursor: move;
   z-index: 400;
-  border: none !important;
+  border: none;
 }
 
+/* Zoom Buttons */
 .leaflet-top.leaflet-left {
     right: 10px;
-    left: auto !important;
-    top: auto !important;
-    bottom: 60px;
-}
-
-.leaflet-top.leaflet-right {
-    top: auto !important;
-    bottom: 10px;
-    left: 10px;
-    right: auto;
+    left: auto;
+    top: auto;
+    bottom: 20px;
 }
 
 #place,
-#do {
-    float: left;
-}
+#do { float: left; }
 
 #place {
     padding-right: 40px;
@@ -136,9 +107,7 @@ div.outer {
     height: 48px;
 }
 
-.form-group {
-    margin-bottom: 0px !important;
-}
+.form-group { margin-bottom: 0px !important; }
 
 #current_loc {
     background-clip: padding-box;
@@ -155,7 +124,7 @@ div.outer {
     left: 10px !important;
     right: auto !important;
     position: fixed;
-    z-index: 999999999;
+    z-index: 99999;
     color: white;
     font-weight: bold;
     background: red;
@@ -185,9 +154,7 @@ div.outer {
   display: none;
 }
 
-#reset_buttons.active {
-  display: block;
-}
+#reset_buttons.active { display: block; }
 
 .leaflet-popup-content {
     text-align: center;
@@ -203,29 +170,17 @@ div.outer {
   transition: color .2s;
 }
 
-.open-stream {
-  font-size: 14px;
-}
+.open-stream { font-size: 14px; }
 
-.fa-angle-double-up:hover {
-  color: #84bd00;
-}
+.fa-angle-double-up:hover { color: #84bd00; }
 
-.fa-angle-double-down:hover {
-  color: red;
-}
+.fa-angle-double-down:hover { color: red; }
 
-.fa-line-chart:hover {
-  color: #00ADEF;
-}
+.fa-line-chart:hover { color: #00ADEF; }
 
-.leaflet-popup-content .fa-angle-double-down {
-  margin-right: 0;
-}
+.leaflet-popup-content .fa-angle-double-down { margin-right: 0; }
 
-.leaflet-popup-content a {
-  color: #0069b5;
-}
+.leaflet-popup-content a { color: #0069b5; }
 
 .fa-angle-double-up,
 .fa-angle-double-down {
@@ -233,15 +188,11 @@ div.outer {
   font-size: 2.3em !important;
 }
 
-.open-stream:hover {
-    text-decoration: none;
-}
+.open-stream:hover { text-decoration: none; }
 
 
 /*****************************************
 *            Information                 *
 *****************************************/
 
-.table-striped > tbody > tr:nth-of-type(2n+1) {
-    background-color: #e8f5ff;
-}
+.table-striped > tbody > tr:nth-of-type(2n+1) { background-color: #e8f5ff; }
