--- a/R/www/styles.css
+++ b/R/www/styles.css
@@ -223,6 +223,11 @@ h4 { font-weight: 400; }
 
 .table-striped > tbody > tr:nth-of-type(2n+1) { background-color: #e8f5ff; }
 
+/*****************************************
+*            Stream Flow                 *
+*****************************************/
+
+#tbl_up { margin-bottom: 50px; }
 
 /*****************************************
 *            Queiries                    *
