--- a/R/www/styles.css
+++ b/R/www/styles.css
@@ -227,7 +227,10 @@ h4 { font-weight: 400; }
 *            Stream Flow                 *
 *****************************************/
 
-#tbl_up { margin-bottom: 50px; }
+#tbl_up,
+#tbl_down { margin-bottom: 50px; }
+
+#downloadData { margin: 50px 0; }
 
 /*****************************************
 *            Queiries                    *
