--- a/inst/flowlinefinder/www/styles.css
+++ b/inst/flowlinefinder/www/styles.css
@@ -212,7 +212,7 @@ h4 { font-weight: 400; }
     width: 18px;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
-    box-shadow: 0 2px 0px rgba(0,0,0,0.2),0 -1px 0px rgba(0,0,0,0.02);
+    box-shadow: 4px 1px 4px rgba(0,0,0,0.13),0px -1px 0px rgba(0,0,0,0.02);
     border-left: none;
 }
 
