--- a/inst/flowlinefinder/www/styles.css
+++ b/inst/flowlinefinder/www/styles.css
@@ -285,7 +285,15 @@ h4 { font-weight: 400; }
 
 #downloadData {
   width: 95%;
+  color: white;
 }
+
+#downloadData:hover {
+  background-color: #286090;
+  border-color: #204d74;
+}
+
+#downloadData i {display: none;}
 
 
 /*****************************************
