--- a/inst/flowlinefinder/www/styles.css
+++ b/inst/flowlinefinder/www/styles.css
@@ -233,7 +233,7 @@ h4 { font-weight: 400; }
 *****************************************/
 
 #tbl_up,
-#tbl_down { margin-bottom: 50px; }
+#tbl_down { margin-bottom: 5px; }
 
 #downloadData,
 #streamFlow{ margin: 30px 0; }
@@ -289,6 +289,13 @@ h4 { font-weight: 400; }
 }
 
 #downloadData i {display: none;}
+
+.dropdown-menu > .active > a, .dropdown-menu > .active > a:focus, 
+.dropdown-menu > .active > a:hover {
+    color: #fff !important;
+}
+
+.bs-select-all { display: none;}
 
 
 /*****************************************
