Error catching for AOIs without data

--- a/inst/flowfinder/www/styles.css
+++ b/inst/flowfinder/www/styles.css
@@ -22,6 +22,8 @@ h2,
 h3, 
 h4 { font-weight: 400; }
 
+.shiny-notification { opacity: 1 !important; }
+
 /*****************************************
 *               Header                   *
 *****************************************/
