--- a/docs/css/carousel.css
+++ b/docs/css/carousel.css
@@ -56,7 +56,6 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  min-width: 100%;
   height: 500px;
 }
 
@@ -126,6 +125,20 @@ body {
     font-size: 50px;
   }
 }
+
+@media (max-width: 991px) {
+  .carousel-inner > .item > img {
+    min-width: 991px !important;
+    overflow-x: hidden;
+  }
+}
+
+@media (min-width: 992px) {
+  .carousel-inner > .item > img {
+    min-width: 100%;
+  }
+}
+
 
 @media (min-width: 992px) {
   .featurette-heading {
