--- a/docs/resources/css/index.css
+++ b/docs/resources/css/index.css
@@ -7,6 +7,13 @@ body {
   color: #5a5a5a;
 }
 
+.fa-github {
+  height: 1.87em;
+  margin-bottom: -1em;
+  margin-top: -1em;
+  margin-right: -.8em;
+}
+
 
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
